# RBG

./: .gitignore  README.md  pyproject.toml
results/: loocv_results_20251215_210116.json  predictions.csv
src/: dataset.py  embed.py  metrics.py  model.py  train.py
